# fognitix

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_fognitx.ps1  do_build.bat  do_configure.bat  fognitix.pro  kill_build.ps1  resources.qrc  vcpkg.json
assets/luts/cinema/: fuji_velvia.cube
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  engine.ts  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src/hooks/: useChat.ts  useClickOutside.ts  useEngineHealth.ts
desktop/src/shell/: AppShell.module.css  AppShell.tsx
desktop/src/theme/: tokens.css
engine/sidecar/: main.cpp
installer/: fognitix_installer.nsi
scripts/: build-windows-release.cmd
shaders/effects/: blur_radial.glsl
src/: Application.cpp  Application.h  main.cpp
src/core/ai/: AICommandSchema.cpp  AICommandSchema.h  AIEngine.cpp  AIEngine.h  AnalyticsAI.cpp  AnalyticsAI.h  AutoColorAI.cpp  AutoColorAI.h  AutoEditor.cpp  AutoEditor.h  BeatSyncAI.cpp  BeatSyncAI.h  CaptionAI.cpp  CaptionAI.h  CommandExecutor.cpp  CommandExecutor.h  FaceTracker.cpp  FaceTracker.h  FrameInterpolation.cpp  FrameInterpolation.h  GroqClient.cpp  GroqClient.h  ObjectTracker.cpp  ObjectTracker.h  PromptParser.cpp  PromptParser.h  SceneAnalyzer.cpp  SceneAnalyzer.h  SilenceRemover.cpp  SilenceRemover.h  StyleTransferAI.cpp  StyleTransferAI.h
src/core/codec/: AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  FormatManager.cpp  FormatManager.h  HardwareEncoder.cpp  HardwareEncoder.h  MediaProbe.cpp  MediaProbe.h  ProxyGenerator.cpp  ProxyGenerator.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  WaveformExtractor.cpp  WaveformExtractor.h
src/core/effects/: EffectBase.cpp  EffectBase.h  EffectExpression.cpp  EffectExpression.h  EffectManager.cpp  EffectManager.h  EffectMask.cpp  EffectMask.h  EffectParameter.cpp  EffectParameter.h  EffectRegistry.cpp  EffectRegistry.h  EffectStack.cpp  EffectStack.h
src/core/engine/: AudioEngine.cpp  AudioEngine.h  CacheManager.cpp  CacheManager.h  FrameProcessor.cpp  FrameProcessor.h  GPUPipeline.cpp  GPUPipeline.h  MemoryManager.cpp  MemoryManager.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RenderEngine.cpp  RenderEngine.h  ThreadPool.cpp  ThreadPool.h  VideoEngine.cpp  VideoEngine.h  VulkanRenderer.cpp  VulkanRenderer.h
src/core/export/: AudioExporter.cpp  AudioExporter.h  DNxExporter.cpp  DNxExporter.h  ExportEngine.cpp  ExportEngine.h  ExportPreset.cpp  ExportPreset.h  ExportQueue.cpp  ExportQueue.h  GIFExporter.cpp  GIFExporter.h  ImageSequenceExporter.cpp  ImageSequenceExporter.h  MP4Exporter.cpp  MP4Exporter.h  ProResExporter.cpp  ProResExporter.h
src/core/project/: AutoSave.cpp  AutoSave.h  MediaPool.cpp  MediaPool.h  Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  TemplateSystem.cpp  TemplateSystem.h  UndoStack.cpp  UndoStack.h  VersionHistory.cpp  VersionHistory.h
src/core/state/: AppState.cpp  AppState.h  Observable.h  SecureCredentialStore.cpp  SecureCredentialStore.h
src/core/timeline/: AdjustmentLayer.cpp  AdjustmentLayer.h  Composition.cpp  Composition.h  EditOperations.cpp  EditOperations.h  Keyframe.cpp  Keyframe.h  KeyframeGraph.cpp  KeyframeGraph.h  NestedComposition.cpp  NestedComposition.h  NullObject.cpp  NullObject.h  OpticalFlow.cpp  OpticalFlow.h  RippleEdit.cpp  RippleEdit.h  RollingEdit.cpp  RollingEdit.h  ShapeLayer.cpp  ShapeLayer.h  SlideEdit.cpp  SlideEdit.h  SlipEdit.cpp  SlipEdit.h  SolidLayer.cpp  SolidLayer.h  SpeedControl.cpp  SpeedControl.h  TextLayer.cpp  TextLayer.h  TimeRemap.cpp  TimeRemap.h  Timeline.cpp  Timeline.h  TimelineClip.cpp  TimelineClip.h  TimelineTrack.cpp  TimelineTrack.h
src/ui/: BootProgress.cpp  BootProgress.h  EffectCatalogFilterModel.cpp  EffectCatalogFilterModel.h  EffectCatalogModel.cpp  EffectCatalogModel.h  FxAssets.cpp  FxAssets.h  MainWindow.cpp  MainWindow.h  MainWindow.qml  PreviewImageProvider.cpp  PreviewImageProvider.h  SystemMetrics.cpp  SystemMetrics.h  ThumbnailImageProvider.cpp  ThumbnailImageProvider.h  WaveformImageProvider.cpp  WaveformImageProvider.h
src/ui/components/: AIResponseCard.qml  AudioVUMeter.qml  DockTabStack.qml  EffectCard.qml  EffectControls.qml  EffectStackPanel.qml  FxButton.qml  FxTabBar.qml  FxTextField.qml  Histogram.qml  HomeScreen.qml  KeyframeEditor.qml  MediaThumbnail.qml  PanelFrame.qml  ParadeScope.qml  ParameterAngleDial.qml  ParameterCheckbox.qml  ParameterColorPicker.qml  ParameterCurveEditor.qml  ParameterDropdown.qml  ParameterSlider.qml  ProgressBar.qml  ShortcutManager.qml  SplashScreen.qml  StatusBar.qml  TimelineClipView.qml  TimelinePlayhead.qml  TimelineRuler.qml  TimelineTrackView.qml  ToolIcon.qml  TransportControls.qml  Vectorscope.qml  WaveformMonitor.qml  ZoomControl.qml
src/ui/dialogs/: CompositionSettingsDialog.qml  ExportDialog.qml  NewProjectDialog.qml
src/ui/menus/: AppMenuBar.qml  EditMenu.qml  FileMenu.qml
src/ui/panels/: AIPromptPanel.cpp  AIPromptPanel.h  AIPromptPanel.qml  AlignPanel.qml  AudioMixerPanel.cpp  AudioMixerPanel.h  AudioMixerPanel.qml  CharacterPanel.qml  ColorPanel.cpp  ColorPanel.h  ColorPanel.qml  ContentAwareFillPanel.qml  EffectsBrowser.qml  EffectsPanel.cpp  EffectsPanel.h  EffectsPanel.qml  EssentialGraphicsPanel.qml  FlowchartPanel.qml  FootageInfoPanel.qml  GraphEditorPanel.qml  HistoryPanel.qml  InfoPanel.qml  InspectorPanel.qml  LibraryPanel.qml  LumetriScopesPanel.qml  MarkersPanel.qml  MaskInterpolationPanel.qml  MediaBrowserPanel.qml  MediaPoolPanel.qml  MetadataPanel.qml  MotionSketchPanel.qml  PanelPlaceholder.qml  PanelRegistry.qml  ParagraphPanel.qml  PreviewPanel.cpp  PreviewPanel.h  PreviewPanel.qml  ProjectPanel.cpp  ProjectPanel.h  ProjectPanel.qml  (+14 more)
tests/: test_ai.cpp  test_codec.cpp  test_effects.cpp  test_export.cpp  test_registry_path.h.in  test_timeline.cpp
tools/: bootstrap_missing_sources.py  gen_effect_registry.py  gen_panel_registry.py  gen_source_tree.py  write_shaders.py
(+184 files in other folders)
